# test_communication

./: CMakeLists.txt  README.md  test_read.cpp  test_real_image.cpp  test_send.cpp  test_send_conf.cpp  test_send_reset.cpp
proto/: CMakeLists.txt  command.proto  config.proto  grid.proto  position.proto
